--- a/hello.html
+++ b/hello.html
@@ -12,7 +12,7 @@
     <body>
         <div>
             <div style="font-size: 100px; color: black; font-family: 'Silkscreen', cursive;" > Vince Ermino</div>
-            <div>Hi welcome to my Website</div>
+            <div>Hi welcome to my Website.</div>
         </div>
     </body>
 </html>
