--- a/My_website/index.html
+++ b/My_website/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="style.css">
-        
+
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
         
         <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet">
@@ -14,8 +14,8 @@
         <div style="display: flex;
         align-items: center;">
 
-            <div style="display:inline-block; margin-left: 200px; margin-top: 100px;">
-                <img style="height: 400px; width: 300px; "src="Profile.jpg" alt="">
+            <div class="profile">
+                <img class="me" src="P">
             </div>
 
             <div style="display:inline-block; margin-left: 50px;">
